// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentResults component When SimpleTable documents have multiple unique asset type code for documents And same no of contentful Asset Types are present with matching asset type code SimpleTable: renders correctly with ALL columns 1`] = `
<div>
  <div
    class="DocumentSimpleTableResults css-358n7x"
    data-testid="document-simple-table-results"
  >
    <div
      class="css-1oyez8m"
    >
      <table
        class="MuiTable-root Table-rowNoColor css-wsrw3a-MuiTable-root"
        data-testid="table"
      >
        <thead
          class="MuiTableHead-root ColorPair-pearl css-18d9kuw-MuiTableHead-root"
          data-testid="table-head"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head css-47w8l6-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium documentSimpleTableResultsStyles-tableHeader documentSimpleTableResultsStyles-tableHeaderCentered css-1tbee56-MuiTableCell-root"
              scope="col"
            >
              <div
                class="MuiFormControl-root css-kbvs16-MuiFormControl-root"
              >
                <label
                  class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                >
                  <span
                    aria-label="MC: documentLibrary.headers.add"
                    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                    data-testid="document-table-select-all"
                  >
                    <input
                      class="PrivateSwitchBase-input css-1m9pwf3"
                      data-indeterminate="false"
                      name="add"
                      type="checkbox"
                      value="false"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="CheckBoxOutlineBlankIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </span>
                </label>
              </div>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
              scope="col"
            >
              MC: documentLibrary.headers.typeCode
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
              scope="col"
            >
              MC: documentLibrary.headers.title
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
              scope="col"
            >
              MC: documentLibrary.headers.size
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium documentSimpleTableResultsStyles-tableHeader css-1tbee56-MuiTableCell-root"
              scope="col"
            >
              MC: documentLibrary.headers.actions
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root row css-xy5ytf-MuiTableRow-root"
            data-testid="document-table-row-contentful-document-id"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-5ikp07-MuiTableCell-root"
              data-testid="document-table-add-contentful-document-id"
            >
              <div
                class="MuiFormControl-root css-kbvs16-MuiFormControl-root"
              >
                <label
                  class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                >
                  <span
                    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                  >
                    <input
                      aria-label="MC: documentLibrary.download contentful document title"
                      class="PrivateSwitchBase-input css-1m9pwf3"
                      data-indeterminate="false"
                      name="contentful-document-id-contentful_document_title"
                      type="checkbox"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="CheckBoxOutlineBlankIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </span>
                </label>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-lc2bdw-MuiTableCell-root"
              data-testid="document-table-title-contentful-document-id"
            >
              <abbr
                title="contentful asset type name"
              >
                contentful-asset-type-code
              </abbr>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-ggd0b4-MuiTableCell-root"
              data-testid="document-table-title-contentful-document-id"
            >
              <a
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium  css-tu2ie8-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/asset-filename.jpg"}"
                data-testid="document-table-download-image/jpeg-button"
                download=""
                href="http://localhost:9000/asset-filename.jpg"
                tabindex="0"
              >
                <span
                  class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium download-icon css-1azjn1g-MuiSvgIcon-root"
                    fill="none"
                    focusable="false"
                    viewBox="0 0 48 48"
                  >
                    <path
                      d="M30.78 5H12.55v38H42V15.858L30.78 5z"
                      fill="#AEB1B1"
                    />
                    <path
                      d="M13.957 41.644V6.357h16.827v9.5H40.6v25.787H13.957z"
                      fill="#fff"
                    />
                    <rect
                      fill="#8E00EA"
                      height="14"
                      rx="1"
                      width="31"
                      x="6"
                      y="23"
                    />
                    <path
                      d="M10.098 31.812c.202.243.403.418.605.524.21.1.433.148.672.148.314 0 .56-.095.74-.285.186-.19.28-.468.28-.833v-5.173h1.69v5.288c0 .433-.07.81-.21 1.128-.143.32-.334.58-.573.786-.24.205-.515.357-.83.456-.305.1-.63.148-.974.148-1.083 0-1.915-.376-2.498-1.128l1.098-1.06zM15.21 26.194h2.724c.463 0 .86.068 1.188.205.328.136.597.318.806.546.217.22.374.478.47.775.105.297.158.605.158.924 0 .41-.07.77-.213 1.083-.135.303-.32.558-.56.763-.232.205-.5.36-.807.467-.306.107-.627.16-.964.16h-1.154v2.678H15.21v-7.6zm2.634 3.533c.314 0 .56-.096.74-.285.186-.198.28-.452.28-.764 0-.32-.094-.577-.28-.775-.187-.205-.437-.308-.75-.308h-.976v2.132h.986zM21.409 26.194h5.107v1.504H23.1v1.482h2.655v1.458H23.1v1.64h3.664v1.517H21.41v-7.6zM31.12 29.613H34v3.293c-.388.342-.844.608-1.367.798-.515.182-1.105.273-1.77.273-.613 0-1.162-.095-1.647-.285-.478-.197-.885-.47-1.22-.82-.337-.35-.595-.767-.774-1.254-.172-.486-.258-1.022-.258-1.607 0-.568.094-1.096.28-1.583.187-.486.452-.907.796-1.265.343-.364.75-.65 1.22-.854.47-.205.994-.308 1.57-.308.68 0 1.273.13 1.78.387.516.25.942.604 1.278 1.06l-1.143 1.106c-.24-.29-.504-.524-.795-.707-.284-.182-.635-.273-1.053-.273-.344 0-.65.064-.92.193-.268.13-.496.304-.683.525-.186.22-.328.48-.425.776-.098.296-.147.61-.147.945 0 .366.056.697.168.993.113.296.27.55.472.763.2.206.437.365.706.48.276.113.575.17.896.17.3 0 .57-.034.818-.103.246-.076.466-.193.66-.353v-.957h-1.32v-1.39z"
                      fill="#fff"
                    />
                  </svg>
                </span>
                <p
                  class="css-1dqo7n"
                >
                  contentful document title
                </p>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-lc2bdw-MuiTableCell-root"
              data-testid="document-table-size-contentful-document-id"
            >
              1 B
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-lc2bdw-MuiTableCell-root"
              data-testid="document-table-actions-contentful-document-id"
            >
              <div
                class="css-1kto1mf"
              >
                <a
                  aria-label="MC: document.library.download.accessibility.label"
                  class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-extra-small IconButton-text MuiIconButton-sizeLarge  css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
                  data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/asset-filename.jpg"}"
                  data-mui-internal-clone-element="true"
                  data-testid="download-document-button-contentful-document-id"
                  download=""
                  href="http://localhost:9000/asset-filename.jpg"
                  tabindex="0"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1k8q05r-MuiSvgIcon-root"
                    data-testid="DownloadIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M5 20h14v-2H5v2zM19 9h-4V3H9v6H5l7 7 7-7z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </a>
                <div
                  aria-label="MC: document.library.copyLink.tooltip.title"
                  class=" MuiBox-root css-2bzkxd"
                  data-mui-internal-clone-element="true"
                  data-testid="tooltip"
                >
                  <button
                    aria-label="MC: document.library.copyLink.accessibility.label"
                    class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-extra-small IconButton-text MuiIconButton-sizeLarge css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
                    data-testid="copy-to-clipboard-button-contentful-document-id"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-y1o0nu-MuiSvgIcon-root"
                      data-testid="ContentCopyIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root row css-xy5ytf-MuiTableRow-root"
            data-testid="document-table-row-pim-document-id"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeMedium css-5ikp07-MuiTableCell-root"
              data-testid="document-table-add-pim-document-id"
            >
              <div
                class="MuiFormControl-root css-kbvs16-MuiFormControl-root"
              >
                <label
                  class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                >
                  <span
                    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                  >
                    <input
                      aria-label="MC: documentLibrary.download pim document title"
                      class="PrivateSwitchBase-input css-1m9pwf3"
                      data-indeterminate="false"
                      name="pim-document-id-pim_document_title"
                      type="checkbox"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="CheckBoxOutlineBlankIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </span>
                </label>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-lc2bdw-MuiTableCell-root"
              data-testid="document-table-title-pim-document-id"
            >
              <abbr
                title="asset type name"
              >
                asset-type-code
              </abbr>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-ggd0b4-MuiTableCell-root"
              data-testid="document-table-title-pim-document-id"
            >
              <a
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium  css-tu2ie8-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/document.pdf"}"
                data-testid="document-table-download-application/pdf-button"
                download=""
                href="http://localhost:9000/document.pdf"
                tabindex="0"
              >
                <span
                  class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium download-icon css-1azjn1g-MuiSvgIcon-root"
                    fill="none"
                    focusable="false"
                    viewBox="0 0 48 48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M30.776 5H12.54v37.997H42v-27.14L30.775 5z"
                      fill="#AEB1B1"
                    />
                    <path
                      d="M13.945 41.64V6.357H30.78v9.5h9.82V41.64H13.944z"
                      fill="#fff"
                    />
                    <rect
                      fill="#D43533"
                      height="14"
                      rx="1"
                      width="30"
                      x="6"
                      y="23"
                    />
                    <path
                      d="M11 26h2.916c.496 0 .92.072 1.272.216.352.144.64.336.864.576.232.232.4.504.504.816.112.312.168.636.168.972 0 .432-.076.812-.228 1.14-.144.32-.344.588-.6.804-.248.216-.536.38-.864.492-.328.112-.672.168-1.032.168h-1.236v2.82H11V26zm2.82 3.72c.336 0 .6-.1.792-.3.2-.208.3-.476.3-.804 0-.336-.1-.608-.3-.816-.2-.216-.468-.324-.804-.324h-1.044v2.244h1.056zM17.637 26h3.024c.617 0 1.186.08 1.706.24.527.16.98.404 1.355.732.386.328.68.748.89 1.26.216.512.323 1.116.323 1.812 0 .664-.107 1.244-.323 1.74-.216.488-.517.9-.9 1.236-.377.328-.83.576-1.357.744-.52.16-1.088.24-1.704.24h-3.012V26zm2.916 6.396c.8 0 1.416-.208 1.848-.624.434-.424.65-1.004.65-1.74 0-.368-.053-.7-.157-.996-.096-.304-.248-.56-.456-.768-.2-.216-.456-.38-.768-.492-.313-.12-.685-.18-1.117-.18H19.45v4.8h1.104zM25.88 26h5.377v1.596H27.69v1.812h2.712v1.548h-2.712v3.048h-1.81V26z"
                      fill="#fff"
                    />
                  </svg>
                </span>
                <p
                  class="css-1dqo7n"
                >
                  pim document title
                </p>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-lc2bdw-MuiTableCell-root"
              data-testid="document-table-size-pim-document-id"
            >
              1 B
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-lc2bdw-MuiTableCell-root"
              data-testid="document-table-actions-pim-document-id"
            >
              <div
                class="css-1kto1mf"
              >
                <a
                  aria-label="MC: document.library.download.accessibility.label"
                  class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-extra-small IconButton-text MuiIconButton-sizeLarge  css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
                  data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/document.pdf"}"
                  data-mui-internal-clone-element="true"
                  data-testid="download-document-button-pim-document-id"
                  download=""
                  href="http://localhost:9000/document.pdf"
                  tabindex="0"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1k8q05r-MuiSvgIcon-root"
                    data-testid="DownloadIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M5 20h14v-2H5v2zM19 9h-4V3H9v6H5l7 7 7-7z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </a>
                <div
                  aria-label="MC: document.library.copyLink.tooltip.title"
                  class=" MuiBox-root css-2bzkxd"
                  data-mui-internal-clone-element="true"
                  data-testid="tooltip"
                >
                  <button
                    aria-label="MC: document.library.copyLink.accessibility.label"
                    class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-extra-small IconButton-text MuiIconButton-sizeLarge css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
                    data-testid="copy-to-clipboard-button-pim-document-id"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-y1o0nu-MuiSvgIcon-root"
                      data-testid="ContentCopyIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`DocumentResults component technicalTable: renders correctly 1`] = `
<div>
  <div
    class="css-1blc44m"
    data-testid="tech-results-accordion"
  >
    <div
      class="css-1blc44m"
    >
      <div
        class=" css-makape"
        data-testid="accordion"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-15trjob-MuiPaper-root-MuiAccordion-root"
          data-testid="tech-table-accordion-item-product-base-code"
        >
          <div
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot MuiAccordionSummary-gutters css-zdeuoz-MuiButtonBase-root-MuiAccordionSummary-root"
            data-gtm="{"id":"selector-accordion1","label":"product-base-code","action":"Selector – Accordion"}"
            data-testid="accordion-summary"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content Accordion-summaryContent MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
            >
              <div>
                <div
                  class="MuiFormControl-root css-kbvs16-MuiFormControl-root"
                >
                  <label
                    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                  >
                    <span
                      class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                    >
                      <input
                        aria-label="Select all documents for product name"
                        class="PrivateSwitchBase-input css-1m9pwf3"
                        data-indeterminate="false"
                        name="product-base-code"
                        type="checkbox"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="CheckBoxOutlineBlankIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </span>
                  </label>
                </div>
              </div>
              <span
                class="css-1oh4pbz"
              >
                product name
              </span>
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="ExpandMoreIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <div
                  class="MuiAccordion-region"
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root DocumentTechnicalTableResults-accordionDetails css-188s0du-MuiAccordionDetails-root"
                  >
                    <a
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1pvdcui-MuiButtonBase-root-MuiButton-root"
                      data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/document.pdf"}"
                      data-testid="document-table-download-application/pdf-button"
                      download=""
                      href="http://localhost:9000/document.pdf"
                      tabindex="0"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium download-icon css-1azjn1g-MuiSvgIcon-root"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 48 48"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M30.776 5H12.54v37.997H42v-27.14L30.775 5z"
                            fill="#AEB1B1"
                          />
                          <path
                            d="M13.945 41.64V6.357H30.78v9.5h9.82V41.64H13.944z"
                            fill="#fff"
                          />
                          <rect
                            fill="#D43533"
                            height="14"
                            rx="1"
                            width="30"
                            x="6"
                            y="23"
                          />
                          <path
                            d="M11 26h2.916c.496 0 .92.072 1.272.216.352.144.64.336.864.576.232.232.4.504.504.816.112.312.168.636.168.972 0 .432-.076.812-.228 1.14-.144.32-.344.588-.6.804-.248.216-.536.38-.864.492-.328.112-.672.168-1.032.168h-1.236v2.82H11V26zm2.82 3.72c.336 0 .6-.1.792-.3.2-.208.3-.476.3-.804 0-.336-.1-.608-.3-.816-.2-.216-.468-.324-.804-.324h-1.044v2.244h1.056zM17.637 26h3.024c.617 0 1.186.08 1.706.24.527.16.98.404 1.355.732.386.328.68.748.89 1.26.216.512.323 1.116.323 1.812 0 .664-.107 1.244-.323 1.74-.216.488-.517.9-.9 1.236-.377.328-.83.576-1.357.744-.52.16-1.088.24-1.704.24h-3.012V26zm2.916 6.396c.8 0 1.416-.208 1.848-.624.434-.424.65-1.004.65-1.74 0-.368-.053-.7-.157-.996-.096-.304-.248-.56-.456-.768-.2-.216-.456-.38-.768-.492-.313-.12-.685-.18-1.117-.18H19.45v4.8h1.104zM25.88 26h5.377v1.596H27.69v1.812h2.712v1.548h-2.712v3.048h-1.81V26z"
                            fill="#fff"
                          />
                        </svg>
                      </span>
                      <p
                        class="css-1dqo7n"
                      >
                        asset type name
                      </p>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                    <div
                      class="css-16cnxgu"
                    >
                      <span
                        class="css-tgspdx"
                      >
                        MC: documentLibrary.headers.size
                        :
                      </span>
                      <span
                        class="css-ackcrd"
                        data-testid="tech-results-accordion-size-pim-document-id"
                      >
                        1 B
                      </span>
                    </div>
                    <div
                      class="css-1bvc4cc"
                    >
                      <div
                        class="MuiBox-root css-38zrbw"
                      >
                        <a
                          aria-label="MC: document.library.download.accessibility.label"
                          class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-extra-small IconButton-text MuiIconButton-sizeLarge  css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
                          data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/document.pdf"}"
                          data-mui-internal-clone-element="true"
                          data-testid="download-document-button-pim-document-id"
                          download=""
                          href="http://localhost:9000/document.pdf"
                          tabindex="0"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1k8q05r-MuiSvgIcon-root"
                            data-testid="DownloadIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M5 20h14v-2H5v2zM19 9h-4V3H9v6H5l7 7 7-7z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </a>
                      </div>
                      <div
                        class="MuiBox-root css-enhvy5"
                      >
                        <div
                          aria-label="MC: document.library.copyLink.tooltip.title"
                          class=" MuiBox-root css-2bzkxd"
                          data-mui-internal-clone-element="true"
                          data-testid="tooltip"
                        >
                          <button
                            aria-label="MC: document.library.copyLink.accessibility.label"
                            class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-extra-small IconButton-text MuiIconButton-sizeLarge css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
                            data-testid="copy-to-clipboard-button-pim-document-id"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-y1o0nu-MuiSvgIcon-root"
                              data-testid="ContentCopyIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
